# VIT-AP-Smart-Hub

./: .gitignore  README.md  build_and_bump.ps1  build_log.txt  pubspec.yaml  shorebird.yaml  shorebird_help.txt  test_excel.dart  update_config.json
.github/workflows/: flutter_ci.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: version_model.dart
lib/providers/: auth_provider.dart  theme_provider.dart  vtop_data_provider.dart
lib/screens/: attendance_screen.dart  cgpa_calculator_screen.dart  exam_schedule_screen.dart  file_converter_screen.dart  floor_map_screen.dart  grades_screen.dart  home_screen.dart  login_screen.dart  marks_screen.dart  mess_menu_screen.dart  settings_screen.dart  timetable_screen.dart  vtop_webview_screen.dart
lib/services/: cache_service.dart  preferences_service.dart  update_service.dart  vtop_api_service.dart
lib/utils/: app_theme.dart
lib/widgets/: semester_selector.dart  update_dialog.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: vtop_get_client.rs
rust/src/api/vtop/: session_manager.rs  vtop_client.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+24 files in other folders)
