[package]
name = "rust_lib_vit_ap_smart_hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-webpki-roots", "http2", "json", "multipart", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.23"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link-Time Optimization
codegen-units = 1    # Compile in a single thread for better optimization
panic = 'abort'      # Reduces binary complexity
strip = true         # Strips symbols from the binary